correcting video and text alignment

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -43,6 +43,7 @@ h2 {
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
+  text-align: left;
 }
 .card-destination {
   height: 250px;
